# serializer version: 1
# name: test_sensors[sensor.aarhus_c_blyfri95-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aarhus_c_blyfri95',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Blyfri95',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gas-station',
    'original_name': 'Blyfri95',
    'platform': 'fuelprices_dk',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234_price_blyfri95',
    'unit_of_measurement': 'DKK/L',
  })
# ---
# name: test_sensors[sensor.aarhus_c_blyfri95-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Aarhus C Blyfri95',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:gas-station',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'DKK/L',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aarhus_c_blyfri95',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '14.29',
  })
# ---
# name: test_sensors[sensor.aarhus_c_blyfri98-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aarhus_c_blyfri98',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Blyfri98',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gas-station',
    'original_name': 'Blyfri98',
    'platform': 'fuelprices_dk',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234_price_blyfri98',
    'unit_of_measurement': 'DKK/L',
  })
# ---
# name: test_sensors[sensor.aarhus_c_blyfri98-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Aarhus C Blyfri98',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:gas-station',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'DKK/L',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aarhus_c_blyfri98',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '14.99',
  })
# ---
# name: test_sensors[sensor.aarhus_c_diesel-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aarhus_c_diesel',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Diesel',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gas-station',
    'original_name': 'Diesel',
    'platform': 'fuelprices_dk',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '1234_price_diesel',
    'unit_of_measurement': 'DKK/L',
  })
# ---
# name: test_sensors[sensor.aarhus_c_diesel-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Aarhus C Diesel',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:gas-station',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'DKK/L',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aarhus_c_diesel',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12.99',
  })
# ---
